--- a/scripts/azure-pipelines/osx/azure-pipelines.yml
+++ b/scripts/azure-pipelines/osx/azure-pipelines.yml
@@ -35,7 +35,7 @@ jobs:
       exit 0
     displayName: 'Create ${{ variables.VCPKG_DOWNLOADS }}'
   - task: Bash@3
-    displayName: 'Build vcpkg'
+    displayName: 'Bootstrap vcpkg'
     inputs:
       filePath: bootstrap-vcpkg.sh
   - task: PowerShell@2
