--- a/versions/f-/fontconfig.json
+++ b/versions/f-/fontconfig.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "8ca1394bfb75ef425ddc306f82915db9485cc01d",
+      "version": "2.13.94",
+      "port-version": 6
+    },
+    {
       "git-tree": "2f32046747209c234e60dc297b48d5bdc7ee4494",
       "version": "2.13.94",
       "port-version": 5
