--- a/ports/unrar/Config.cmake.in
+++ b/ports/unrar/Config.cmake.in
@@ -6,10 +6,10 @@ get_filename_component(_unrar_root "${_unrar_root}" PATH)
 set(_unrar_lib "${_unrar_root}/lib/unrar.lib")
 if (EXISTS "${_unrar_lib}")
 
-    add_library(unrar INTERFACE IMPORTED)
-    set_target_properties(unrar PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${_unrar_root}/include")
-    set_target_properties(unrar PROPERTIES IMPORTED_LOCATION "${_unrar_lib}")
-    set_property(TARGET unrar APPEND PROPERTY IMPORTED_CONFIGURATIONS)
+    add_library(unofficial::unrar::unrar INTERFACE IMPORTED)
+    set_target_properties(unofficial::unrar::unrar PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${_unrar_root}/include")
+    set_target_properties(unofficial::unrar::unrar PROPERTIES IMPORTED_LOCATION "${_unrar_lib}")
+    set_property(TARGET unofficial::unrar::unrar APPEND PROPERTY IMPORTED_CONFIGURATIONS)
     set(unrar_FOUND TRUE)
 
 else()
