--- a/ports/libdatrie/CMakeLists.txt
+++ b/ports/libdatrie/CMakeLists.txt
@@ -68,10 +68,10 @@ if (NOT SKIP_TOOL)
     target_link_libraries(trietool libdatrie)
 
     find_path(ICONV_INCLUDE_DIR iconv.h)
-    find_library(ICONV_LIBRARY NAMES iconv libiconv)
-    find_library(CHARSET_LIBRARY NAMES charset libcharset)
+    find_package(Iconv REQUIRED)
     target_include_directories(trietool PRIVATE ${ICONV_INCLUDE_DIR})
-    target_link_libraries(trietool ${ICONV_LIBRARY} ${CHARSET_LIBRARY})
+    target_link_libraries(trietool Iconv::Iconv)
+    target_link_libraries(trietool Iconv::Charset)
 
     install(
         TARGETS trietool
