[harfbuzz] Remove PARENT_SCOPE in harfbuzzConfig.cmake.in

--- a/ports/harfbuzz/harfbuzzConfig.cmake.in
+++ b/ports/harfbuzz/harfbuzzConfig.cmake.in
@@ -59,13 +59,13 @@ endif()
 get_filename_component(_INSTALL_DIR "${CMAKE_CURRENT_LIST_DIR}/../../" ABSOLUTE)
 target_include_directories(harfbuzz INTERFACE "${_INSTALL_DIR}/include/harfbuzz")
 
-set(HARFBUZZ_LIBRARY harfbuzz::harfbuzz PARENT_SCOPE)
-set(HARFBUZZ_LIBRARIES harfbuzz::harfbuzz PARENT_SCOPE)
-set(HARFBUZZ_INCLUDE_DIR "${_INSTALL_DIR}/include/harfbuzz" PARENT_SCOPE)
-set(HARFBUZZ_INCLUDE_DIRS "${_INSTALL_DIR}/include/harfbuzz" PARENT_SCOPE)
+set(HARFBUZZ_LIBRARY harfbuzz::harfbuzz)
+set(HARFBUZZ_LIBRARIES harfbuzz::harfbuzz)
+set(HARFBUZZ_INCLUDE_DIR "${_INSTALL_DIR}/include/harfbuzz")
+set(HARFBUZZ_INCLUDE_DIRS "${_INSTALL_DIR}/include/harfbuzz")
 
 if(HARFBUZZ_LIBRARY_RELEASE)
-  set(HARFBUZZ_FOUND TRUE PARENT_SCOPE)
+  set(HARFBUZZ_FOUND TRUE)
 else()
-  set(HARFBUZZ_FOUND FALSE PARENT_SCOPE)
+  set(HARFBUZZ_FOUND FALSE)
 endif()
