--- a/versions/f-/fontconfig.json
+++ b/versions/f-/fontconfig.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "d5b0b6ab59f6631a82dbd5c730501168b8e4ee25",
+      "version": "2.13.94",
+      "port-version": 6
+    },
+    {
       "git-tree": "2f32046747209c234e60dc297b48d5bdc7ee4494",
       "version": "2.13.94",
       "port-version": 5
