--- a/scripts/azure-pipelines/windows/azure-pipelines.yml
+++ b/scripts/azure-pipelines/windows/azure-pipelines.yml
@@ -34,15 +34,15 @@ jobs:
       pwsh: true
   - script: .\bootstrap-vcpkg.bat
     displayName: 'Bootstrap vcpkg'
-    condition: eq('', ${{ parameters.vcpkg-tool-sha }})
+    condition: eq('', ${{ parameters.vcpkgToolSha }})
   - task: CmdLine@2
     displayName: "Build vcpkg with CMake"
-    condition: ne('', ${{ parameters.vcpkg-tool-sha }})
+    condition: ne('', ${{ parameters.vcpkgToolSha }})
     inputs:
       script: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x86 -host_arch=x86
         git clone https://github.com/microsoft/vcpkg-tool vcpkg-tool
-        git -C switch -d ${{ parameters.vcpkg-tool-sha }}
+        git -C switch -d ${{ parameters.vcpkgToolSha }}
         rmdir /s /q build.x86.release > nul 2> nul
         cmake.exe -G Ninja -DCMAKE_BUILD_TYPE=Release -DBUILD_TESTING=OFF -DVCPKG_DEVELOPMENT_WARNINGS=OFF -DVCPKG_WARNINGS_AS_ERRORS=OFF -DVCPKG_BUILD_FUZZING=OFF -DVCPKG_BUILD_TLS12_DOWNLOADER=OFF -B build.x86.release -S vcpkg-tool
         ninja.exe -C build.x86.release
