--- a/scripts/azure-pipelines/windows/azure-pipelines.yml
+++ b/scripts/azure-pipelines/windows/azure-pipelines.yml
@@ -34,10 +34,10 @@ jobs:
       pwsh: true
   - script: .\bootstrap-vcpkg.bat
     displayName: 'Bootstrap vcpkg'
-    condition: eq('', '${{ parameters.vcpkgToolSha }}')
+    condition: eq('use default', '${{ parameters.vcpkgToolSha }}')
   - task: CmdLine@2
     displayName: "Build vcpkg with CMake"
-    condition: ne('', '${{ parameters.vcpkgToolSha }}')
+    condition: ne('use default', '${{ parameters.vcpkgToolSha }}')
     inputs:
       script: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x86 -host_arch=x86
