--- a/scripts/azure-pipelines/windows/azure-pipelines.yml
+++ b/scripts/azure-pipelines/windows/azure-pipelines.yml
@@ -1,7 +1,6 @@
 # Copyright (c) Microsoft Corporation.
 # SPDX-License-Identifier: MIT
 #
-
 jobs:
 - job: ${{ parameters.jobName }}
   pool:
@@ -41,6 +40,7 @@ jobs:
     inputs:
       script: |
         call "C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat" -arch=x86 -host_arch=x86
+        set C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\Ninja;C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\IDE\CommonExtensions\Microsoft\CMake\CMake\bin;%PATH%
         git clone https://github.com/microsoft/vcpkg-tool vcpkg-tool
         git -C vcpkg-tool switch -d ${{ parameters.vcpkgToolSha }}
         rmdir /s /q build.x86.release > nul 2> nul
