Fix suffix again

--- a/ports/sdl2-image/CMakeLists.txt
+++ b/ports/sdl2-image/CMakeLists.txt
@@ -20,10 +20,10 @@ set(JPEG_FLAG JPG)
 set(TIFF_FLAG TIF)
 
 # names of potentially dynamically loaded libraries
-set(JPEG_DYNAMIC \"libjpeg-9.dll\")
-set(PNG_DYNAMIC \"libpng16-16.dll\")
-set(TIFF_DYNAMIC \"libtiff-5.dll\")
-set(WEBP_DYNAMIC \"libwebp-4.dll\")
+set(JPEG_DYNAMIC \"libjpeg-9${VCPKG_TARGET_SHARED_LIBRARY_SUFFIX}\")
+set(PNG_DYNAMIC \"libpng16-16${VCPKG_TARGET_SHARED_LIBRARY_SUFFIX}\")
+set(TIFF_DYNAMIC \"libtiff-5${VCPKG_TARGET_SHARED_LIBRARY_SUFFIX}\")
+set(WEBP_DYNAMIC \"libwebp-4${VCPKG_TARGET_SHARED_LIBRARY_SUFFIX}\")
 
 ### implementation ###
 
