Fix PNG linkage

--- a/ports/sdl2-image/CMakeLists.txt
+++ b/ports/sdl2-image/CMakeLists.txt
@@ -73,7 +73,7 @@ endif()
 
 if(USE_PNG)
 find_package(libpng REQUIRED)
-target_link_libraries(SDL2_image png)
+target_link_libraries(SDL2_image PRIVATE png)
 endif()
 
 if(USE_JPEG)
