--- a/ports/sdl2-image/CMakeLists.txt
+++ b/ports/sdl2-image/CMakeLists.txt
@@ -87,7 +87,7 @@ if(USE_TIFF)
     
     if(CMAKE_SYSTEM_NAME STREQUAL "WindowsStore")
         set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /wd4996")
-        set(CMAKE_C_FLAGS "${CMAKE_CXX_FLAGS} /wd4996")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996")
     endif()
 endif()
 
