--- a/scripts/test_ports/cmake-user/project/CMakeLists.txt
+++ b/scripts/test_ports/cmake-user/project/CMakeLists.txt
@@ -56,14 +56,14 @@ foreach(package ${FIND_PACKAGES})
     message(STATUS "find_package(${package}) check: success")
 
     set(libraries_var "")
-    if(DEFINED ${package_upper}_LIBRARY)
-        set(libraries_var "${package_upper}_LIBRARY")
-    elseif(DEFINED ${package}_LIBRARY)
-        set(libraries_var "${package}_LIBRARY")
-    elseif(DEFINED ${package_upper}_LIBRARIES)
+    if(DEFINED ${package_upper}_LIBRARIES)
         set(libraries_var "${package_upper}_LIBRARIES")
     elseif(DEFINED ${package}_LIBRARIES)
         set(libraries_var "${package}_LIBRARIES")
+    elseif(DEFINED ${package_upper}_LIBRARY)
+        set(libraries_var "${package_upper}_LIBRARY")
+    elseif(DEFINED ${package}_LIBRARY)
+        set(libraries_var "${package}_LIBRARY")
     else()
         message(STATUS "${package}_LIBRARY/IES: undefined")
         continue()
@@ -82,15 +82,15 @@ foreach(package ${FIND_PACKAGES})
         string(REPLACE "optimized;" "ignore:" libraries "${libraries}")
     endif()
     foreach(item IN LISTS libraries)
-        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/" vcpkg_found)
-        if(NOT vcpkg_found EQUAL 0)
+        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/" starts_with_vcpkg)
+        if(NOT starts_with_vcpkg EQUAL "0")
             continue()
         endif()
-        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib/" release_found)
-        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/debug/lib/" debug_found)
-        if(CMAKE_BUILD_TYPE STREQUAL "Release" AND debug_found EQUAL 0)
+        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/lib/" starts_with_release)
+        string(FIND "${item}" "${VCPKG_INSTALLED_DIR}/${VCPKG_TARGET_TRIPLET}/debug/lib/" starts_with_debug)
+        if(CMAKE_BUILD_TYPE STREQUAL "Release" AND starts_with_debug EQUAL "0")
             message(SEND_ERROR "Debug lib in release build: ${item}")
-        elseif(CMAKE_BUILD_TYPE STREQUAL "Debug" AND release_found EQUAL 0)
+        elseif(CMAKE_BUILD_TYPE STREQUAL "Debug" AND starts_with_release EQUAL "0")
             message(SEND_ERROR "Release lib in debug build: ${item}")
         endif()
     endforeach()
