Address PR comments

--- a/ports/boost-modular-build-helper/CMakeLists.txt
+++ b/ports/boost-modular-build-helper/CMakeLists.txt
@@ -2,12 +2,12 @@ cmake_minimum_required(VERSION 3.9)
 project(boost NONE)
 
 # The following variables are used in user-config.jam file
-set(USER_CONFIG_TOOLSET)
-set(USER_CONFIG_TOOLSET_VERSION)
-set(USER_CONFIG_TOOLSET_INVOCATION_COMMAND)
-set(USER_CONFIG_TOOLSET_OPTIONS)
-set(USER_CONFIG_EXTRA_LINES)
-set(USER_CONFIG_REQUIREMENTS)
+set(USER_CONFIG_TOOLSET "")
+set(USER_CONFIG_TOOLSET_VERSION "")
+set(USER_CONFIG_TOOLSET_INVOCATION_COMMAND "")
+set(USER_CONFIG_TOOLSET_OPTIONS "")
+set(USER_CONFIG_EXTRA_LINES "")
+set(USER_CONFIG_REQUIREMENTS "")
 
 set(B2_OPTIONS)
 
@@ -26,7 +26,7 @@ else()
     list(APPEND B2_OPTIONS link=static)
 endif()
 
-if(VCPKG_DETECTED_CMAKE_SIZEOF_VOID_P EQUAL 8)
+if(VCPKG_DETECTED_CMAKE_SIZEOF_VOID_P EQUAL "8")
     list(APPEND B2_OPTIONS address-model=64)
 else()
     list(APPEND B2_OPTIONS address-model=32)
@@ -52,7 +52,7 @@ if(VCPKG_DETECTED_MSVC)
     else()
         set(USER_CONFIG_TOOLSET msvc)
     endif()
-    if(VCPKG_DETECTED_MSVC_VERSION LESS 1900)
+    if(VCPKG_DETECTED_MSVC_VERSION LESS "1900")
         math(EXPR USER_CONFIG_TOOLSET_VERSION "${VCPKG_DETECTED_MSVC_VERSION} / 10 - 60")
     else()
         math(EXPR USER_CONFIG_TOOLSET_VERSION "${VCPKG_DETECTED_MSVC_VERSION} / 10 - 50")
@@ -74,12 +74,12 @@ else()
 endif()
 
 # Properly handle compiler and linker flags passed by VCPKG
-string(TOUPPER "${CMAKE_BUILD_TYPE}" VCPKG_CONFIGS)
+string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPER_BUILD_TYPE)
 
-set(CXXFLAGS "${VCPKG_COMBINED_CXX_FLAGS_${VCPKG_CONFIGS}}")
-set(CFLAGS "${VCPKG_COMBINED_C_FLAGS_${VCPKG_CONFIGS}}")
-set(LDFLAGS "${VCPKG_COMBINED_SHARED_LINKER_FLAGS_${VCPKG_CONFIGS}}")
-set(ARFLAGS "${VCPKG_COMBINED_STATIC_LINKER_FLAGS_${VCPKG_CONFIGS}}")
+set(CXXFLAGS "${VCPKG_COMBINED_CXX_FLAGS_${UPPER_BUILD_TYPE}}")
+set(CFLAGS "${VCPKG_COMBINED_C_FLAGS_${UPPER_BUILD_TYPE}}")
+set(LDFLAGS "${VCPKG_COMBINED_SHARED_LINKER_FLAGS_${UPPER_BUILD_TYPE}}")
+set(ARFLAGS "${VCPKG_COMBINED_STATIC_LINKER_FLAGS_${UPPER_BUILD_TYPE}}")
 
 if(APPLE)
     string(APPEND COMPILEFLAGS " -D_DARWIN_C_SOURCE")
@@ -110,8 +110,8 @@ string(APPEND CXXFLAGS "${COMPILEFLAGS}")
 string(APPEND CFLAGS "${COMPILEFLAGS}")
 
 foreach(var CXXFLAGS CFLAGS LDFLAGS ARFLAGS)
-    string(REPLACE "\\" "\\\\" ${var} "${${var}}")
-    string(REPLACE "\"" "\\\"" ${var} "${${var}}")
+    string(REPLACE [[\]] [[\\]] ${var} "${${var}}")
+    string(REPLACE [["]] [[\"]] ${var} "${${var}}")
     string(REGEX REPLACE "[ \t\r\n]+" " " ${var} "${${var}}")
     string(STRIP "${${var}}" ${var})
 endforeach()
