Prefer <Pkg>_VAR over <PKG>_VAR

--- a/scripts/test_ports/cmake-user/project/CMakeLists.txt
+++ b/scripts/test_ports/cmake-user/project/CMakeLists.txt
@@ -56,13 +56,13 @@ foreach(package ${FIND_PACKAGES})
     message(STATUS "find_package(${package}) check: success")
 
     set(libraries_var "")
-    if(DEFINED ${package_upper}_LIBRARIES)
+    if(DEFINED ${package}_LIBRARIES)
         set(libraries_var "${package_upper}_LIBRARIES")
-    elseif(DEFINED ${package}_LIBRARIES)
+    elseif(DEFINED ${package_upper}_LIBRARIES)
         set(libraries_var "${package}_LIBRARIES")
-    elseif(DEFINED ${package_upper}_LIBRARY)
-        set(libraries_var "${package_upper}_LIBRARY")
     elseif(DEFINED ${package}_LIBRARY)
+        set(libraries_var "${package_upper}_LIBRARY")
+    elseif(DEFINED ${package_upper}_LIBRARY)
         set(libraries_var "${package}_LIBRARY")
     else()
         message(STATUS "${package}_LIBRARY/IES: undefined")
