don't append ANDROID_NATIVE_API_LEVEL when it is there.

--- a/scripts/get_cmake_vars/CMakeLists.txt
+++ b/scripts/get_cmake_vars/CMakeLists.txt
@@ -111,7 +111,11 @@ macro(_vcpkg_adjust_flags flag_var)
     if(CMAKE_SYSTEM_NAME MATCHES "Android")
         if("${flag_var}" MATCHES "CMAKE_(C|CXX)_FLAGS$")
             if(ANDROID_NDK_MAJOR GREATER_EQUAL 23)
-                string(APPEND ${flag_var} " ${CMAKE_CXX_COMPILE_OPTIONS_TARGET}${ANDROID_LLVM_TRIPLE}${ANDROID_NATIVE_API_LEVEL} ")
+                if (ANDROID_LLVM_TRIPLE MATCHES "[0-9]+")
+                    string(APPEND ${flag_var} " ${CMAKE_CXX_COMPILE_OPTIONS_TARGET}${ANDROID_LLVM_TRIPLE} ")
+                else()
+                    string(APPEND ${flag_var} " ${CMAKE_CXX_COMPILE_OPTIONS_TARGET}${ANDROID_LLVM_TRIPLE}${ANDROID_NATIVE_API_LEVEL} ")
+                endif()
             elseif(ANDROID_NDK_MAJOR GREATER_EQUAL 19)
                 string(REGEX REPLACE "-march=[^ ]+" "" ${flag_var} "${${flag_var}}")
                 string(REGEX REPLACE "-mtune=[^ ]+" "" ${flag_var} "${${flag_var}}")
