--- a/ports/sdl2-image/CMakeLists.txt
+++ b/ports/sdl2-image/CMakeLists.txt
@@ -3,7 +3,6 @@ project(SDL2_image C)
 
 ### configuration ###
 
-list(APPEND CMAKE_MODULE_PATH "${CURRENT_INSTALLED_DIR}/share/libwebp")
 # enable all file formats which are supported natively
 set(SUPPORTED_FORMATS BMP GIF LBM PCX PNM TGA XPM XCF XV SVG)
 
@@ -99,14 +98,10 @@ install(TARGETS SDL2_image
 
 install(FILES SDL_image.h DESTINATION include/SDL2 CONFIGURATIONS Release)
 
-file(WRITE "${CMAKE_CURRENT_BINARY_DIR}/sdl2-image-config.cmake"
-[[include(CMakeFindDependencyMacro)
-find_dependency(SDL2 CONFIG)
-if(USE_WEBP)
-    find_dependency(WebP CONFIG)
-endif()
-include("${CMAKE_CURRENT_LIST_DIR}/sdl2-image-targets.cmake")
-]])
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/sdl2-image-config.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/sdl2-image-config.cmake" @ONLY
+    INSTALL_DESTINATION "share/sdl2-image")
+
 set(prefix "")
 set(exec_prefix [[${prefix}]])
 set(libdir [[${prefix}/lib]])
