--- a/versions/o-/omplapp.json
+++ b/versions/o-/omplapp.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "b41d77505fc75d8501c7c98efe175327344e47a2",
+      "version": "1.5.1",
+      "port-version": 4
+    },
+    {
       "git-tree": "3f243c859f1597f18da61a472684c113e2ed150d",
       "version": "1.5.1",
       "port-version": 3
