[fontconfig] update versions registry (microsoft#23920)

--- a/versions/f-/fontconfig.json
+++ b/versions/f-/fontconfig.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "b1b4988144c08203b3779fc405118ace56ba726f",
+      "version": "2.14.0",
+      "port-version": 0
+    },
+    {
       "git-tree": "8f782f79dc3a2c6834a7e5de4a941b11822067dd",
       "version": "2.13.94",
       "port-version": 6
