--- a/ports/quickjs/CMakeLists.txt
+++ b/ports/quickjs/CMakeLists.txt
@@ -2,25 +2,20 @@ cmake_minimum_required(VERSION 3.15)
 
 project(quickjs)
 
-include(GNUInstallDirs)
-
 option(ENABLE_BIGNUM "Enable support for Bignum extensions" ON)
 
-set(PUBLIC_HEADERS
-    "${CMAKE_CURRENT_LIST_DIR}/quickjs.h"
-    "${CMAKE_CURRENT_LIST_DIR}/quickjs-libc.h"
-)
-
 add_library(quickjs
-    "${CMAKE_CURRENT_LIST_DIR}/quickjs.c"
-    "${CMAKE_CURRENT_LIST_DIR}/libregexp.c"
-    "${CMAKE_CURRENT_LIST_DIR}/libunicode.c"
-    "${CMAKE_CURRENT_LIST_DIR}/cutils.c"
-    "${CMAKE_CURRENT_LIST_DIR}/quickjs-libc.c"
-    ${PUBLIC_HEADERS}
+    quickjs.c
+    libregexp.c
+    libunicode.c
+    cutils.c
+    quickjs-libc.c
 )
 
-target_include_directories(quickjs PRIVATE "${CMAKE_CURRENT_LIST_DIR}")
+target_include_directories(quickjs PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}>
+    $<INSTALL_INTERFACE:include>
+)
 
 if(WIN32)
     target_compile_definitions(quickjs PRIVATE __USE_MINGW_ANSI_STDIO)
@@ -29,9 +24,7 @@ else()
 endif()
 
 if(ENABLE_BIGNUM)
-    target_sources(quickjs PRIVATE
-        "${CMAKE_CURRENT_LIST_DIR}/libbf.c"
-    )
+    target_sources(quickjs PRIVATE libbf.c)
     target_compile_definitions(quickjs PUBLIC CONFIG_BIGNUM)
 endif()
 
@@ -45,25 +38,20 @@ target_compile_definitions(quickjs PRIVATE
     CONFIG_VERSION=\"2021-03-27\"
 )
 
-set_target_properties(quickjs PROPERTIES PUBLIC_HEADER
-    "${PUBLIC_HEADERS}"
-)
-
 install(TARGETS quickjs
-    EXPORT unofficial-quickjs
-    ARCHIVE DESTINATION "lib"
-    LIBRARY DESTINATION "lib"
-    PUBLIC_HEADER DESTINATION "include/quickjs"
+    EXPORT unofficial-quickjs-targets
+    RUNTIME DESTINATION bin
+    LIBRARY DESTINATION lib
+    ARCHIVE DESTINATION lib
 )
 
-set(CMAKE_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/unofficial-quickjs)
+install(FILES quickjs.h quickjs-libc.h
+    DESTINATION include
+    CONFIGURATIONS Release
+)
 
-install(EXPORT unofficial::quickjs
-    FILE quickjs-targets.cmake
+install(EXPORT unofficial-quickjs-targets
     NAMESPACE unofficial::quickjs::
-    DESTINATION ${CMAKE_DESTINATION}
+    FILE unofficial-quickjs-targets.cmake
+    DESTINATION share/unofficial-quickjs
 )
-
-export(PACKAGE quickjs)
-
-install(FILES "quickjs-config.cmake" DESTINATION ${CMAKE_DESTINATION})
