fix build error

--- a/ports/harfbuzz/harfbuzzConfig.cmake.in
+++ b/ports/harfbuzz/harfbuzzConfig.cmake.in
@@ -63,9 +63,15 @@ set(HARFBUZZ_LIBRARY harfbuzz::harfbuzz)
 set(HARFBUZZ_LIBRARIES harfbuzz::harfbuzz)
 set(HARFBUZZ_INCLUDE_DIR "${_INSTALL_DIR}/include/harfbuzz")
 set(HARFBUZZ_INCLUDE_DIRS "${_INSTALL_DIR}/include/harfbuzz")
+set(HARFBUZZ_LIBRARY harfbuzz::harfbuzz PARENT_SCOPE)
+set(HARFBUZZ_LIBRARIES harfbuzz::harfbuzz PARENT_SCOPE)
+set(HARFBUZZ_INCLUDE_DIR "${_INSTALL_DIR}/include/harfbuzz" PARENT_SCOPE)
+set(HARFBUZZ_INCLUDE_DIRS "${_INSTALL_DIR}/include/harfbuzz" PARENT_SCOPE)
 
 if(HARFBUZZ_LIBRARY_RELEASE)
   set(HARFBUZZ_FOUND TRUE)
+  set(HARFBUZZ_FOUND TRUE PARENT_SCOPE)
 else()
   set(HARFBUZZ_FOUND FALSE)
+  set(HARFBUZZ_FOUND FALSE PARENT_SCOPE)
 endif()
