--- a/versions/o-/openxr-loader.json
+++ b/versions/o-/openxr-loader.json
@@ -1,6 +1,11 @@
 {
   "versions": [
     {
+      "git-tree": "9af5947350a04a441a1691124c8f09a427e0a788",
+      "version": "1.0.22",
+      "port-version": 3
+    },
+    {
       "git-tree": "27baef30397d0db0e6cc01d6f60a86e2ff4df238",
       "version": "1.0.22",
       "port-version": 2
