--- a/ports/dxsdk-d3dx/dxsdk-d3dx-config.cmake.in
+++ b/ports/dxsdk-d3dx/dxsdk-d3dx-config.cmake.in
@@ -18,20 +18,20 @@ if (EXISTS "${_d3dx_root_lib}")
 
    add_library(Microsoft::D3DX10 SHARED IMPORTED)
    set_target_properties(Microsoft::D3DX10 PROPERTIES
-      IMPORTED_LOCATION_RELEASE            "${_d3dx_root}/bin/D3DX10_43.dll"
-      IMPORTED_IMPLIB_RELEASE              "${_d3dx_root}/lib/D3DX10.lib"
+      IMPORTED_LOCATION_RELEASE            "${_d3dx_root}/bin/d3dx10_43.dll"
+      IMPORTED_IMPLIB_RELEASE              "${_d3dx_root}/lib/d3dx10.lib"
       IMPORTED_LOCATION_DEBUG              "${_d3dx_root}/debug/bin/D3DX10d_43.dll"
-      IMPORTED_IMPLIB_DEBUG                "${_d3dx_root}/debug/lib/D3DX10d.lib"
+      IMPORTED_IMPLIB_DEBUG                "${_d3dx_root}/debug/lib/d3dx10d.lib"
       INTERFACE_INCLUDE_DIRECTORIES        "${_d3dx_root}/include/dxsdk-d3dx"
       IMPORTED_CONFIGURATIONS              "Debug;Release"
       IMPORTED_LINK_INTERFACE_LANGUAGES    "C")
 
    add_library(Microsoft::D3DX11 SHARED IMPORTED)
    set_target_properties(Microsoft::D3DX11 PROPERTIES
-      IMPORTED_LOCATION_RELEASE            "${_d3dx_root}/bin/D3DX11_43.dll"
-      IMPORTED_IMPLIB_RELEASE              "${_d3dx_root}/lib/D3DX11.lib"
+      IMPORTED_LOCATION_RELEASE            "${_d3dx_root}/bin/d3dx11_43.dll"
+      IMPORTED_IMPLIB_RELEASE              "${_d3dx_root}/lib/d3dx11.lib"
       IMPORTED_LOCATION_DEBUG              "${_d3dx_root}/debug/bin/D3DX11d_43.dll"
-      IMPORTED_IMPLIB_DEBUG                "${_d3dx_root}/debug/lib/D3DX11d.lib"
+      IMPORTED_IMPLIB_DEBUG                "${_d3dx_root}/debug/lib/d3dx11d.lib"
       INTERFACE_INCLUDE_DIRECTORIES        "${_d3dx_root}/include/dxsdk-d3dx"
       IMPORTED_CONFIGURATIONS              "Debug;Release"
       IMPORTED_LINK_INTERFACE_LANGUAGES    "C")
