--- a/ports/blas/CMakeLists.txt
+++ b/ports/blas/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.17)
 
-project(Find_BLAS_external LANGUAGES CXX)
+project(Find_BLAS_external)
 find_package(BLAS REQUIRED)
