Fix '/' incorrectly replaced by '-' on Linux.

--- a/ports/vcpkg-cmake/cmake_get_vars/CMakeLists.txt
+++ b/ports/vcpkg-cmake/cmake_get_vars/CMakeLists.txt
@@ -143,7 +143,7 @@ foreach(incdir IN LISTS CMAKE_C_STANDARD_INCLUDE_DIRECTORIES)
 endforeach()
 
 foreach(flag CXX C SHARED_LINKER EXE_LINKER STATIC_LINKER RC)
-    if(MSVC)
+    if(MSVC AND "${CMAKE_HOST_SYSTEM_NAME}" STREQUAL "Windows")
         # Transform MSVC /flags to -flags due to bash scripts intepreting /flag as a path.
         # This is imperfect because it fails on directories with trailing spaces, but those are exceedingly rare
         string(REGEX REPLACE "(^| )/" "\\1-" ${flag}_FLAGS "${${flag}_FLAGS}")
