--- a/scripts/get_cmake_vars/CMakeLists.txt
+++ b/scripts/get_cmake_vars/CMakeLists.txt
@@ -93,9 +93,9 @@ macro(_vcpkg_adjust_flags flag_var)
     if(MSVC) # Transform MSVC /flags to -flags due to bash scripts intepreting /flag as a path.
         string(REGEX REPLACE "(^| )/" "\\1-" ${flag_var} "${${flag_var}}")
         if(CMAKE_SYSTEM_NAME STREQUAL "WindowsStore")
-            foreach("${flag_var}" IN_LIST CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
+            if("${flag_var}" IN_LIST CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
                 string(APPEND ${flag_var} " -ZW:nostdlib")
-            endforeach()
+            endif()
         endif()
     endif()
     if(CMAKE_SYSTEM_NAME MATCHES "Darwin")
