Add comment for future modifications.

--- a/ports/vcpkg-cmake/cmake_get_vars/CMakeLists.txt
+++ b/ports/vcpkg-cmake/cmake_get_vars/CMakeLists.txt
@@ -143,6 +143,7 @@ foreach(incdir IN LISTS CMAKE_C_STANDARD_INCLUDE_DIRECTORIES)
 endforeach()
 
 foreach(flag CXX C SHARED_LINKER EXE_LINKER STATIC_LINKER RC)
+    # For cross-compilation, we don't want to do this in case we have absolute paths starting with `/`
     if(MSVC AND "${CMAKE_HOST_SYSTEM_NAME}" MATCHES "Windows")
         # Transform MSVC /flags to -flags due to bash scripts intepreting /flag as a path.
         # This is imperfect because it fails on directories with trailing spaces, but those are exceedingly rare
