--- a/ports/gtk3/CMakeLists.txt
+++ b/ports/gtk3/CMakeLists.txt
@@ -51,7 +51,7 @@ set(GTK_REQUIRED_LIBRARIES
 )
 
 if (WIN32)
-    set(GTK_REQUIRED_LIBRARIES
+    list(APPEND GTK_REQUIRED_LIBRARIES
         ${GTK_REQUIRED_LIBRARIES}
         PkgConfig::PANGO_WIN32
     )
